# rongyao-manager-file-upload-tool

./: .gitignore  .gitignore-summary.txt  CI-CD使用指南.md  CI-CD快速开始.md  CI-CD配置完成.md  DEBUG.md  EXECUTION_GUIDE.md  FINAL_REPORT.md  Gitee快速开始.md  HOW_TO_FIX_CRASH.txt  INDEX.md  INVOKE_ERROR_SOLUTION.md  PROJECT_COMPLETION_SUMMARY.txt  PROJECT_INFO_AND_DETAIL_DIALOG_FIX.md  QUICK_FIX.md  README.md  README_TAURI.md  START_DEV.sh  TAURI_2X_MIGRATION_SUMMARY.md  TAURI_APP_PROGRESS.md  TAURI_CLI_INSTALL.md  TAURI_CONFIG_FIX.md  TAURI_DEPLOYMENT_GUIDE.md  TAURI_DEVELOPMENT_GUIDE.md  TAURI_DIALOG_FIX.md  TAURI_FIXES_SUMMARY.md  TAURI_PREVIEW_FEATURE.md  TAURI_PROJECT_FINAL_STATUS.md  TAURI_QUICKSTART.md  build_macos.sh  build_macos_debug.sh  build_windows.bat  convert_to_api_format.py  fix-macos-app.sh  install.bat  install.sh  macOS打包完成总结.md  main.py  parse_daily_report_excel.py  push-all.sh  (+33 more)
api/: 01-用户认证模块API.md  19-项目日报批量导入API.md
docs/: API地址配置.md  API字段映射修改说明.md  API调试输出说明.md  API配置说明.md  API错误处理优化说明.md  CI-CD打包失败修复说明.md  CI-CD打包问题完整修复总结.md  GitHub-Release权限问题修复.md  GitHub-Secrets配置指南.md  Gitee-CI-CD配置指南.md  Git忽略配置.md  QSizePolicy错误修复说明.md  Tauri-CI-CD-QuickStart.md  Tauri版本上传流程优化说明.md  Tauri迁移方案.md  Token传入方式说明.md  Token持久化问题修复说明.md  Token管理和无感刷新实现说明.md  Windows打包中文问题修复.md  Windows打包完整指南.md  Windows打包快速参考.md  Windows打包资源导航.md  macOS代码签名配置完成总结.md  macOS打包完成总结.md  上传未登录问题修复说明.md  (+36 more)
tauri-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: auth.rs  excel.rs  main.rs  project.rs  upload.rs
(+58 files in other folders)
