[package]
name = "molten-salt-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.22"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
